# mb-mail-service

./: .dockerignore  .gitlint  .markdownlint.jsonc  .pre-commit-config.yaml  .typos.toml  Cargo.toml  Dockerfile  README.md  compose.yaml  deny.toml  prometheus.yaml  renovate.json
.config/: nextest.toml
.github/workflows/: ci.yml  docker-hub-description.yml  release-image.yml  weblate-create-pr.yml
docs/: CONTRIBUTING.md  OPERATING.md  RELEASING.md
etc/: mb-mail-service.service  mb-mail-service.socket
fixtures/: basic.html  basic.txt  include.html  include.txt  subscription.html  subscription.txt
grafana/datasources/: datasources.yaml
locales/: ca.json  de.json  en.json  es.json  fr.json  lt.json  ms.json  nl.json  pt.json  ru.json  zh_Hans.json
src/: components.rs  main.rs  render.rs  send.rs  serve.rs  templates.rs  text.rs
src/templates/: basic.rs  cb_review.rs  edit_note.rs  editor_message.rs  editor_report.rs  email_in_use.rs  follow.rs  lost_username.rs  no_vote.rs  notification.rs  personal_recommendation.rs  playlist_notification.rs  recording_pin.rs  recording_recommendation.rs  reset_password.rs  subscription.rs  thanks.rs  verify_email.rs
templates/: another.mjml  basic.mjml  include.mjml  include_snippet.mjml  subscription.mjml  test.hbs
