
[package]
name = "mb-mail-service"
version = "0.4.11"
edition = "2021"
publish = false
license = "GPL-2.0-or-later"

[package.metadata.mf1]
locales = ["en", "de", "es", "fr", "lt", "ru"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.8.1", features = ["tracing", "macros"] }
html2text = { version = "0.15.3", features = ["css"] }
lettre = { version = "0.11.12", features = ["tokio1", "builder", "smtp-transport", "pool", "tokio1-rustls-tls", "tracing"], default-features = false }
listenfd = "1.0.2"
mrmx-macros = { version = "0.1.0", git = "https://github.com/JadedBlueEyes/mrmx.git" }
mrmx = { version = "0.1.0", git = "https://github.com/JadedBlueEyes/mrmx.git" }
mrml = { version = "4.0.0", git = "https://github.com/JadedBlueEyes/mrml.git", branch = "jade/fragment", features = ["render", "parse"], default-features = false}
serde_json = "1.0.138"
strum = "0.27.0"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.2", features = ["timeout", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
serde = { version = "1.0.217", features = ["derive"] }
mf1 = "0.1.6"
sentry = { version = "0.45.0", features = ["tracing", "tower", "tower-http"] }
futures-util = "0.3.31"
futures = "0.3.31"
dashmap = { version = "6.1.0", features = ["serde"] }
config = { version = "0.15.7", default-features = false, features = ["convert-case"] }
convert_case = "0.8.0"
monostate = "1.0.0"
reqwest = { version = "0.12.12", default-features = false }
metrics = "0.24.1"
axum-prometheus = "0.9.0"
# metrics-exporter-prometheus = { version = "0.15.3", default-features = false, features = ["http-listener"] }
git-testament = "0.2.6"
html-escape = "0.2.13"

[dev-dependencies]
expect-test = "1.5.1"
axum-test = "18.0.0"

[profile.release]
lto = true
codegen-units = 1
